@@ -1,2 +1,8 @@
 compile.on.save=true
+do.depend=false
+do.jar=true
+do.jlink=false
+javac.debug=true
+javadoc.preview=true
+jlink.strip=false
 user.properties.file=C:\\Users\\Admin\\AppData\\Roaming\\NetBeans\\19\\build.properties
